--- a/public/signup.html
+++ b/public/signup.html
@@ -40,6 +40,12 @@
                         <i class="fas fa-key"></i>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
+                    <div class="form-group">
+                            <input type="firstName" class="form-control" id="firstNameInput" placeholder="First Name">
+                        </div>
+                        <div class="form-group">
+                            <input type="lastName" class="form-control" id="lastNameInput" placeholder="Last Name">
+                        </div>
                     <div style="display: none" id="alert" class="alert alert-danger" role="alert">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                         <span class="sr-only">Error:</span> <span class="msg"></span>
