flash cards working, need to merge with user API to get grade level

--- a/public/members.html
+++ b/public/members.html
@@ -124,7 +124,7 @@
 <!-- footer -->
   <footer class="footer">
     <div class="container" style="background: #e9ecef; width: 35%;text-align:center; margin-bottom:4%">
-        <a target="_blank" href="/api/friends">API Vocab Link</a> | 
+        <a target="_blank" href="/api/curriculum">API Vocab Link</a> | 
         <a target="_blank" href="https://github.com/LoganMcnulty/Vocab-O-Matic">GitHub Repo</a>
     </div>
   </footer>
