--- a/public/logIn.html
+++ b/public/logIn.html
@@ -27,7 +27,7 @@
         <div class="col-sm-8 main-section">
             <div class="modal-content">
                 <div class="col-12 vomlogo">
-                    <img src="images/VOM.png" alt="VOC logo">
+                    <img src="images/VOM.png" alt="Vocab-O-Matic logo">
                 </div>
                 <form class="col-12 login">
                     <div class="form-group">
