--- a/public/members.html
+++ b/public/members.html
@@ -38,7 +38,7 @@
     <!-- welcome message and about the app -->
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h2>Welcome <span class="member-name"></span></h2>
+          <h2>Welcome, <span class="member-name"></span></h2>
         </div>
       </div>
       <div class="row">
@@ -136,5 +136,6 @@
 <!-- script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
+  
 
 
