beautify pages, add about the team and research, fix API route errors

--- a/public/logIn.html
+++ b/public/logIn.html
@@ -22,8 +22,9 @@
                 </div>
     </nav>
 
+
     <!--Modal Log in Box-->
-    <div class="modal-dialog text-center">
+    <div class="modal-dialog text-center row">
         <div class="col-sm-8 main-section">
             <div class="modal-content">
                 <div class="col-12 vomlogo">
@@ -50,6 +51,18 @@
             <!-- end of modal content -->
         </div>
     </div>
+
+    <div class="row justify-content-center">
+        <div class="col-sm-2 justify-content-center">
+            <a target="_blank" href="/research">
+                <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px">
+                    Team Members, Research
+                </h3>
+        </div>
+    </div>
+
+</div>
+    
 
     <!-- Boostrap Jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
