--- a/public/signup.html
+++ b/public/signup.html
@@ -61,6 +61,16 @@
         </div>
     </div>
 
+    <div class="row justify-content-center">
+        <div class="col-sm-2 justify-content-center">
+            <a target="_blank" href="/research">
+                <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px">
+                    Team Members, Research
+                </h3>
+            </a>
+        </div>
+    </div>
+
     <!-- Boostrap Jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
