--- a/public/vocabCards.html
+++ b/public/vocabCards.html
@@ -37,8 +37,8 @@
   <div class="container">
 
     <div class="container">
-    <div class="row justify-content-center">
-      <div class="jumbotron col-9">
+    <div class="row justify-content-center" style="margin-top:5%">
+      <div class="jumbotron col-9" style="background:wheat; border:3px solid lightblue">
         <h1 class="display-4" style="font-family: 'Yanone Kaffeesatz', sans-serif; font-size: 60px; text-align:center; margin-top:-5%; margin-bottom:-5%">
             Today's Vocab Words 
             <i class="fas fa-book-reader" style="margin-left: 2%"></i>
@@ -46,11 +46,11 @@
       </div>
     </div>
 
-<!-- name and image entry -->
+
 <div class="row justify-content-center">
     <div class="col-lg-8">
       <!-- Vocab Div -->
-      <div class="card" style="background-color:#e9ecef">
+      <div class="card" style="background-color:wheat; border:3px solid lightblue">
         <div class="card-body justify-content-center" id="wordBody" style="text-align:center">
 
                 <div class="card" style="width: 30rem; margin: 0 auto 2%">
@@ -70,8 +70,8 @@
   </div>
 
 <!-- footer -->
-<footer class="footer">
-    <div class="container" style="background: #e9ecef; width: 35%;text-align:center; margin-top:4%">
+  <footer class="footer">
+    <div class="container" style="background: wheat; width: 35%;text-align:center; margin-top:4%; border-radius:25px">
         <a target="_blank" href="/api/curriculum">API Vocab Link</a> | 
         <a target="_blank" href="https://github.com/LoganMcnulty/Vocab-O-Matic">GitHub Repo</a>
     </div>
