--- a/public/members.html
+++ b/public/members.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vocab-O-Matic Sign Up!</title>
+    <title>Vocab-O-Matic Members!</title>
 
   <!-- mobile device compatibility -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,16 +19,17 @@
     <link href="https://fonts.googleapis.com/css?family=Geo" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body style="background: rgb(179, 133, 66)">
 
 <!-- header -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/logout">
-          Logout
-        </a>
-      </div>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
+      <h1 class="h1-responsive font-weight-bold text-center my-4">Vocab-O-Matic</h1>
+      <h2 style="margin-right: 7%">Welcome: <span class="member-name"></span></h2>
+      <a href="/logout">
+        <h2 >Logout</h2>
+      </a>
     </div>
   </nav>
 
@@ -36,17 +37,18 @@
   <div class="container">
 
     <!-- welcome message and about the app -->
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h2>Welcome <span class="member-name"></span></h2>
-        </div>
-      </div>
-      <div class="row">
+      <div class="row" style="margin:3% auto 3%; ">
         <div class="col-md-12">
-            <!--App header-->
-            <h1 class="h1-responsive font-weight-bold text-center my-4">Vocab-O-Matic</h1>
-            <!--App Description-->
-            <p class="text-center w-responsive mx-auto mb-5">This app will send (via SMS or email) a list of vocabulary words to parents to use with their students. The problem is to expose students to new words outside of the classroom to help them develop a rich vocabulary. Users will enter contact information, preferences for topics, and the frequency that they want to receive the list of work. The app will send list of words based on these preferences.</p>
+          <div class="card card-default" style="border:3px solid lightblue">
+            <div class="card-header" style="background:wheat; font-weight:bold;">
+              <h2>
+                About
+              </h2>
+            </div>
+            <div class="card-body">
+                Vocab-O-Matic sends targeted curriculum (Reminders) to the email of the parent of an enrolled student. These reminders include a link to a vocabulary interface, of which the student and parent may use to review the curriculum together. The reminders aim to expose students to new words that will help them develop a rich vocabulary. Simply enter your student's name, their grade level, and the frequency of which you'd like to be reminded to review with your student. Vocab-O-Matic will do the rest!
+            </div>
+          </div>
         </div>
       </div>
 
@@ -55,7 +57,9 @@
           <div class="col-lg-10">
             <div class="card card-default" style="margin-bottom: 5%; border:3px solid lightblue">
               <div class="card-header" style="background:wheat; font-weight:bold">
-                Add/Update Student Info
+                <h4>
+                    Add/Update Student Info
+                </h4>
               </div>
               <div class="card-body">
 
@@ -65,12 +69,20 @@
                           <form>
                             <!-- student name -->
                               <div class="form-group">
-                                <label for="studentNameInput">Student Name:</label>
+                                <label for="studentNameInput">
+                                  <h5>
+                                    Student Name:
+                                  </h5>
+                                </label>
                                 <input class="form-control" id="studentNameInput" type="text">
                               </div>
                             <!-- grade level  -->
                               <div class="form-group">
-                                <label for="studentGradeLevelForm">Grade Level</label>
+                                <label for="studentGradeLevelForm">
+                                  <h5>
+                                      Grade Level:
+                                  </h5>
+                                </label>
                                 <select class="form-control" id="studentGradeLevelForm">
                                   <option value="1">First</option>
                                   <option value="2">Second</option>
@@ -81,7 +93,11 @@
                               </div>
                             <!-- reminder frequency  -->
                               <div class="form-group">
-                                <label for="reminderFreqSelect">Reminder Frequency</label>
+                                <label for="reminderFreqSelect">
+                                  <h5>
+                                    Reminder Frequency:
+                                  </h5>
+                                </label>
                                 <select class="form-control" id="reminderFreqSelect">
                                   <option value="Daily">Daily at 4:00 PM</option>
                                   <option value="Weekly">Weekly on Wednesday</option>
@@ -99,16 +115,16 @@
                       <!-- view student info -->
                       <div class="card col-lg-5" style="width: 18rem;">
                         <div class="card-body">
-                          <h5 class="card-title">Your Student</h5>
+                          <h4 class="card-title">Your Student</h4>
                           <ul class="list-group list-group-flush">
-                              <li class="list-group-item">
-                                  <p id="studentNameExisting">test</p>
+                              <li class="list-group-item"> 
+                                  <h5 id="studentNameExisting"></h5>
                               </li>
                               <li class="list-group-item">
-                                  <p id="studentGradeExisting">test</p>
+                                  <h5 id="studentGradeExisting"></h5>
                               </li>
                               <li class="list-group-item">
-                                  <p id="studentReminderExisting">test</p>
+                                  <h5 id="studentReminderExisting"></h5>
                               </li>
                             </ul>
                         </div>
@@ -123,7 +139,7 @@
 
 <!-- footer -->
   <footer class="footer">
-    <div class="container" style="background: #e9ecef; width: 35%;text-align:center; margin-bottom:4%">
+    <div class="container" style="background: wheat; width: 35%;text-align:center; margin-bottom:4%; border-radius:25px">
         <a target="_blank" href="/api/curriculum">API Vocab Link</a> | 
         <a target="_blank" href="https://github.com/LoganMcnulty/Vocab-O-Matic">GitHub Repo</a>
     </div>
