--- a/public/authors.html
+++ b/public/authors.html
@@ -112,7 +112,7 @@
                                 <div class="card">
                                     <div class="card-body text-center mt-4">
                                         <h4 class="card-title">Justin Carlson</h4>
-                                        <p class="card-text">A short thing about Justin  sdg sdgs gs h gaef adf </p>
+                                        <p class="card-text">I'm a full stack developer in Raleigh, NC, with experience in front-end and back-end technology stacks. My goal is to work with organizations to help them enhance their impact and reach through custom-built web presence and web apps. My focus is on creating clean, user-friendly experiences. </p>
                                         <ul class="list-inline">
                                             </li>
                                             <li class="list-inline-item">
