--- a/public/logIn.html
+++ b/public/logIn.html
@@ -54,7 +54,7 @@
 
     <div class="row justify-content-center">
         <div class="col-sm-2 justify-content-center">
-            <a target="_blank" href="/research">
+            <a target="_blank" href="authors.html">
                 <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px">
                     Team Members, Research
                 </h3>
