--- a/public/authors.html
+++ b/public/authors.html
@@ -66,7 +66,7 @@
                                     <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="https://media.licdn.com/dms/image/C4E03AQEo-LL08wylmw/profile-displayphoto-shrink_800_800/0?e=1580342400&v=beta&t=fwGnzYIus8ODU9g_qC55ga6pUenOYMBGW4Vu6LCzdH0" alt="card image"></p>
                                         <h4 class="card-title">Marcus Krueger</h4>
-                                        <p class="card-text">Web Developer - Lover of Cheese</p>
+                                        <p class="card-text">Web Developer - Jack of many trades</p>
                                         <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -75,13 +75,8 @@
                                 <div class="card">
                                     <div class="card-body text-center mt-4">
                                         <h4 class="card-title">Marcus Krueger</h4>
-                                        <p class="card-text"><strong>Bio:</strong> Is a U.S. Marine Veteran. He is currently enrolled in UNC Coding Bootcamp. His past experiences include:
-                                            <br>
-                                            Sales Associate
-                                            <br>
-                                            Diesel Mechanic
-                                            <br>
-                                            Childcare Provider</p>
+                                        <p class="card-text"><strong>Bio:</strong>A Marine Corps Veteran with an extensive knowledge and background with photography and design.
+                                        <br>Always up for new challenges and problem solving situations. </p>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://github.com/marcuskrueger90">
