redid my about me

--- a/public/authors.html
+++ b/public/authors.html
@@ -75,8 +75,9 @@
                                 <div class="card">
                                     <div class="card-body text-center mt-4">
                                         <h4 class="card-title">Marcus Krueger</h4>
-                                        <p class="card-text"><strong>Bio:</strong>A Marine Corps Veteran with an extensive knowledge and background with photography and design.
-                                        <br>Always up for new challenges and problem solving situations. </p>
+                                        <p class="card-text"><strong>Bio:</strong> I'm a Marine Corps Veteran with an extensive knowledge and experience in photography and design.
+                                        I enjoy using my skills to creatively, but effectively solve problems with sometimes out-of-the-box solutions.    
+                                        Always up for new challenges and problem solving situations. </p>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
                                                 <a class="social-icon text-xs-center" target="_blank" href="https://github.com/marcuskrueger90">
