--- a/public/logIn.html
+++ b/public/logIn.html
@@ -41,9 +41,7 @@
                     </div>
                     <button type="submit" class="btn" id="login"><i class="fas fa-sign-in-alt"></i> Login</button>
                 </form>
-                <div class="col-12 forgot">
-                    <a href="#">Forgot Password?</a>
-                </div>
+                
                 <div class="col-12 signUp">
                         <a href="/">Create Account</a>
                 </div>
@@ -55,8 +53,8 @@
     <div class="row justify-content-center">
         <div class="col-sm-2 justify-content-center">
             <a target="_blank" href="authors.html">
-                <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px">
-                    Team Members, Research
+                <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px; font-size: 12px">
+                    Team Members and Research
                 </h3>
         </div>
     </div>
