--- a/public/signup.html
+++ b/public/signup.html
@@ -64,8 +64,8 @@
     <div class="row justify-content-center">
         <div class="col-sm-2 justify-content-center">
             <a target="_blank" href="/research">
-                <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px">
-                    Team Members, Research
+                <h3 class="text-center" style="background: whitesmoke; border: solid rgb(179, 133, 66) 5px; border-radius:25px; font-size: 12px;">
+                    Team Members and Research
                 </h3>
             </a>
         </div>
